output/ProjLangParser.java
/* ProjLangParser.java */
/* Generated By:JavaCC: Do not edit this line. ProjLangParser.java */
public class ProjLangParser implements ProjLangParserConstants {

// Complete the rule for input() below and 
// add rest of the parser rules following it.

// complete the rule and do not change the return type
  final public 
Expr input() throws ParseException {Expr expr1;
    expr1 = EXPR();
    jj_consume_token(SEMCOL);
{if ("" != null) return expr1;}
    throw new Error("Missing return statement in function");
}

  final public Expr EXPR() throws ParseException {Expr expr1;
    if (jj_2_1(2)) {
      expr1 = IF_EXP();
{if ("" != null) return expr1;}
    } else if (jj_2_2(2)) {
      expr1 = LETVAL_EXP();
{if ("" != null) return expr1;}
    } else if (jj_2_3(2)) {
      expr1 = LETFUN_EXP();
{if ("" != null) return expr1;}
    } else if (jj_2_4(2)) {
      expr1 = WHILE_EXP();
{if ("" != null) return expr1;}
    } else if (jj_2_5(2)) {
      expr1 = SEQ_EXP();
{if ("" != null) return expr1;}
    } else if (jj_2_6(2)) {
      expr1 = ASSN_EXP();
{if ("" != null) return expr1;}
    } else if (jj_2_7(2)) {
      expr1 = NOT_EXP();
{if ("" != null) return expr1;}
    } else if (jj_2_8(2)) {
      expr1 = REL_EXP();
{if ("" != null) return expr1;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Expr IF_EXP() throws ParseException {Expr expr1,expr2,expr3;
    jj_consume_token(IF);
    expr1 = EXPR();
    jj_consume_token(THEN);
    expr2 = EXPR();
    jj_consume_token(ELSE);
    expr3 = EXPR();
{if ("" != null) return new IfExp(expr1,expr2,expr3);}
    throw new Error("Missing return statement in function");
}

  final public Expr LETVAL_EXP() throws ParseException {String value; Expr expr1,expr2;
    jj_consume_token(LET);
    jj_consume_token(VAL);
    jj_consume_token(ID);
value = token.image;
    jj_consume_token(EQU);
    expr1 = EXPR();
    jj_consume_token(IN);
    expr2 = EXPR();
    jj_consume_token(END);
{if ("" != null) return new LetValExp(value,expr1,expr2);}
    throw new Error("Missing return statement in function");
}

  final public Expr LETFUN_EXP() throws ParseException {String name1,name2; Expr expr1,expr2;
    jj_consume_token(LET);
    jj_consume_token(FUN);
    jj_consume_token(ID);
name1 = token.image;
    jj_consume_token(LPAR);
    jj_consume_token(ID);
name2 = token.image;
    jj_consume_token(RPAR);
    jj_consume_token(EQU);
    expr1 = EXPR();
    jj_consume_token(IN);
    expr2 = EXPR();
    jj_consume_token(END);
{if ("" != null) return new LetFunExp(name1,name2,expr1,expr2);}
    throw new Error("Missing return statement in function");
}

  final public Expr WHILE_EXP() throws ParseException {Expr expr1,expr2;
    jj_consume_token(WHILE);
    expr1 = EXPR();
    jj_consume_token(DO);
    expr2 = EXPR();
{if ("" != null) return new WhileExp(expr1,expr2);}
    throw new Error("Missing return statement in function");
}

  final public Expr SEQ_EXP() throws ParseException {Expr expr1,expr2;
    jj_consume_token(LFLBR);
    expr1 = EXPR();
    label_1:
    while (true) {
      if (jj_2_9(2)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(SEMCOL);
      expr2 = EXPR();
expr1 = new SeqExp(expr1,expr2);
    }
    jj_consume_token(RFLBR);
{if ("" != null) return expr1;}
    throw new Error("Missing return statement in function");
}

  final public Expr NOT_EXP() throws ParseException {Expr expr1;
    jj_consume_token(NOT);
    expr1 = EXPR();
{if ("" != null) return new NotExp(expr1);}
    throw new Error("Missing return statement in function");
}

  final public Expr ASSN_EXP() throws ParseException {String value; Expr expr1;
    jj_consume_token(ID);
value = token.image;
    jj_consume_token(ASS);
    expr1 = EXPR();
{if ("" != null) return new AssnExp(value, expr1);}
    throw new Error("Missing return statement in function");
}

  final public Expr REL_EXP() throws ParseException {String value; Expr expr1,expr2;
    expr1 = ARITH_EXP();
    if (jj_2_12(2)) {
      if (jj_2_10(2)) {
        jj_consume_token(LT);
value = token.image;
        expr2 = ARITH_EXP();
expr1 = new BinExp(BinOp.LT,expr1,expr2);
      } else if (jj_2_11(2)) {
        jj_consume_token(EQU);
value = token.image;
        expr2 = ARITH_EXP();
expr1 = new BinExp(BinOp.EQ,expr1,expr2);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
{if ("" != null) return expr1;}
    throw new Error("Missing return statement in function");
}

  final public Expr ARITH_EXP() throws ParseException {String value; Expr expr1,expr2;
    expr1 = TERM();
    label_2:
    while (true) {
      if (jj_2_13(2)) {
        ;
      } else {
        break label_2;
      }
      ADDOP();
value = token.image;
      expr2 = TERM();
if(value.equals("+")){expr1 = new BinExp(BinOp.PLUS,expr1,expr2);}else if(value.equals("-")){expr1 = new BinExp(BinOp.MINUS,expr1,expr2);}else {expr1 = new BinExp(BinOp.OR,expr1,expr2);}
    }
{if ("" != null) return expr1;}
    throw new Error("Missing return statement in function");
}

  final public Expr TERM() throws ParseException {String value; Expr expr1,expr2;
    expr1 = FACTOR();
    label_3:
    while (true) {
      if (jj_2_14(2)) {
        ;
      } else {
        break label_3;
      }
      MULTOP();
value = token.image;
      expr2 = FACTOR();
if(value.equals("*")){expr1 = new BinExp(BinOp.TIMES,expr1,expr2);}else if(value.equals("/")){expr1 = new BinExp(BinOp.DIV,expr1,expr2);}else {expr1 = new BinExp(BinOp.AND,expr1,expr2);}
    }
{if ("" != null) return expr1;}
    throw new Error("Missing return statement in function");
}

  final public Expr FACTOR() throws ParseException {Expr exp; String value;
    if (jj_2_15(2)) {
      jj_consume_token(NUM);
int value1 = Integer.parseInt(token.image); {if ("" != null) return new IntConst(value1);}
    } else if (jj_2_16(2)) {
      jj_consume_token(TRUE);
boolean bool1 = Boolean.parseBoolean(token.image); {if ("" != null) return new BoolConst(bool1);}
    } else if (jj_2_17(2)) {
      jj_consume_token(FALSE);
boolean bool1 = Boolean.parseBoolean(token.image); {if ("" != null) return new BoolConst(bool1);}
    } else if (jj_2_18(2)) {
      jj_consume_token(ID);
value = token.image;
      jj_consume_token(LPAR);
      exp = EXPR();
      jj_consume_token(RPAR);
{if ("" != null) return new AppExp(value,exp);}
    } else if (jj_2_19(2)) {
      jj_consume_token(ID);
value=token.image; {{if ("" != null) return new VarExp(value);}}
    } else if (jj_2_20(2)) {
      jj_consume_token(LPAR);
      exp = EXPR();
      jj_consume_token(RPAR);
{if ("" != null) return exp;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public void ADDOP() throws ParseException {
    if (jj_2_21(2)) {
      jj_consume_token(ADD);
    } else if (jj_2_22(2)) {
      jj_consume_token(SUB);
    } else if (jj_2_23(2)) {
      jj_consume_token(LOR);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void MULTOP() throws ParseException {
    if (jj_2_24(2)) {
      jj_consume_token(MUL);
    } else if (jj_2_25(2)) {
      jj_consume_token(DIV);
    } else if (jj_2_26(2)) {
      jj_consume_token(LAND);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_25()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_26()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_3_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (!jj_3_10()) return false;
    jj_scanpos = xsp;
    if (jj_3_11()) return true;
    return false;
  }

  private boolean jj_3_10()
 {
    if (jj_scan_token(LT)) return true;
    if (jj_3R_ARITH_EXP_102_52_13()) return true;
    return false;
  }

  private boolean jj_3_11()
 {
    if (jj_scan_token(EQU)) return true;
    if (jj_3R_ARITH_EXP_102_52_13()) return true;
    return false;
  }

  private boolean jj_3_13()
 {
    if (jj_3R_ADDOP_114_19_14()) return true;
    if (jj_3R_TERM_104_47_15()) return true;
    return false;
  }

  private boolean jj_3_14()
 {
    if (jj_3R_MULTOP_118_20_16()) return true;
    if (jj_3R_FACTOR_106_41_17()) return true;
    return false;
  }

  private boolean jj_3_9()
 {
    if (jj_scan_token(SEMCOL)) return true;
    if (jj_3R_EXPR_85_15_12()) return true;
    return false;
  }

  private boolean jj_3R_LETFUN_EXP_96_60_6()
 {
    if (jj_scan_token(LET)) return true;
    if (jj_scan_token(FUN)) return true;
    return false;
  }

  private boolean jj_3R_ARITH_EXP_102_52_13()
 {
    if (jj_3R_TERM_104_47_15()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_13()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_REL_EXP_101_51_11()
 {
    if (jj_3R_ARITH_EXP_102_52_13()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_12()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3R_TERM_104_47_15()
 {
    if (jj_3R_FACTOR_106_41_17()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_14()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_LETVAL_EXP_95_54_5()
 {
    if (jj_scan_token(LET)) return true;
    if (jj_scan_token(VAL)) return true;
    return false;
  }

  private boolean jj_3R_FACTOR_106_41_17()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (!jj_3_15()) return false;
    jj_scanpos = xsp;
    if (!jj_3_16()) return false;
    jj_scanpos = xsp;
    if (!jj_3_17()) return false;
    jj_scanpos = xsp;
    if (!jj_3_18()) return false;
    jj_scanpos = xsp;
    if (!jj_3_19()) return false;
    jj_scanpos = xsp;
    if (jj_3_20()) return true;
    return false;
  }

  private boolean jj_3_15()
 {
    if (jj_scan_token(NUM)) return true;
    return false;
  }

  private boolean jj_3R_ASSN_EXP_100_46_9()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(ASS)) return true;
    return false;
  }

  private boolean jj_3R_MULTOP_118_20_16()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (!jj_3_24()) return false;
    jj_scanpos = xsp;
    if (!jj_3_25()) return false;
    jj_scanpos = xsp;
    if (jj_3_26()) return true;
    return false;
  }

  private boolean jj_3_24()
 {
    if (jj_scan_token(MUL)) return true;
    return false;
  }

  private boolean jj_3R_WHILE_EXP_97_40_7()
 {
    if (jj_scan_token(WHILE)) return true;
    if (jj_3R_EXPR_85_15_12()) return true;
    return false;
  }

  private boolean jj_3R_SEQ_EXP_98_38_8()
 {
    if (jj_scan_token(LFLBR)) return true;
    if (jj_3R_EXPR_85_15_12()) return true;
    return false;
  }

  private boolean jj_3_26()
 {
    if (jj_scan_token(LAND)) return true;
    return false;
  }

  private boolean jj_3R_IF_EXP_94_41_4()
 {
    if (jj_scan_token(IF)) return true;
    if (jj_3R_EXPR_85_15_12()) return true;
    return false;
  }

  private boolean jj_3_25()
 {
    if (jj_scan_token(DIV)) return true;
    return false;
  }

  private boolean jj_3R_ADDOP_114_19_14()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (!jj_3_21()) return false;
    jj_scanpos = xsp;
    if (!jj_3_22()) return false;
    jj_scanpos = xsp;
    if (jj_3_23()) return true;
    return false;
  }

  private boolean jj_3_21()
 {
    if (jj_scan_token(ADD)) return true;
    return false;
  }

  private boolean jj_3_23()
 {
    if (jj_scan_token(LOR)) return true;
    return false;
  }

  private boolean jj_3R_NOT_EXP_99_31_10()
 {
    if (jj_scan_token(NOT)) return true;
    if (jj_3R_EXPR_85_15_12()) return true;
    return false;
  }

  private boolean jj_3_22()
 {
    if (jj_scan_token(SUB)) return true;
    return false;
  }

  private boolean jj_3_20()
 {
    if (jj_scan_token(LPAR)) return true;
    if (jj_3R_EXPR_85_15_12()) return true;
    return false;
  }

  private boolean jj_3_19()
 {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3_18()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LPAR)) return true;
    return false;
  }

  private boolean jj_3_17()
 {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  private boolean jj_3_16()
 {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  private boolean jj_3_8()
 {
    if (jj_3R_REL_EXP_101_51_11()) return true;
    return false;
  }

  private boolean jj_3_7()
 {
    if (jj_3R_NOT_EXP_99_31_10()) return true;
    return false;
  }

  private boolean jj_3_6()
 {
    if (jj_3R_ASSN_EXP_100_46_9()) return true;
    return false;
  }

  private boolean jj_3_5()
 {
    if (jj_3R_SEQ_EXP_98_38_8()) return true;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_3R_WHILE_EXP_97_40_7()) return true;
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_3R_LETFUN_EXP_96_60_6()) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_3R_LETVAL_EXP_95_54_5()) return true;
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_3R_IF_EXP_94_41_4()) return true;
    return false;
  }

  private boolean jj_3R_EXPR_85_15_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (!jj_3_1()) return false;
    jj_scanpos = xsp;
    if (!jj_3_2()) return false;
    jj_scanpos = xsp;
    if (!jj_3_3()) return false;
    jj_scanpos = xsp;
    if (!jj_3_4()) return false;
    jj_scanpos = xsp;
    if (!jj_3_5()) return false;
    jj_scanpos = xsp;
    if (!jj_3_6()) return false;
    jj_scanpos = xsp;
    if (!jj_3_7()) return false;
    jj_scanpos = xsp;
    if (jj_3_8()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public ProjLangParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {};
	}
  final private JJCalls[] jj_2_rtns = new JJCalls[26];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public ProjLangParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ProjLangParser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new ProjLangParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 0; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public ProjLangParser(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new ProjLangParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new ProjLangParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public ProjLangParser(ProjLangParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(ProjLangParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   if (++jj_gc > 100) {
		 jj_gc = 0;
		 for (int i = 0; i < jj_2_rtns.length; i++) {
		   JJCalls c = jj_2_rtns[i];
		   while (c != null) {
			 if (c.gen < jj_gen) c.first = null;
			 c = c.next;
		   }
		 }
	   }
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }

  @SuppressWarnings("serial")
  static private final class LookaheadSuccess extends java.lang.Error {
    @Override
    public Throwable fillInStackTrace() {
      return this;
    }
  }
  static private final LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
	 if (jj_scanpos == jj_lastpos) {
	   jj_la--;
	   if (jj_scanpos.next == null) {
		 jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
	   } else {
		 jj_lastpos = jj_scanpos = jj_scanpos.next;
	   }
	 } else {
	   jj_scanpos = jj_scanpos.next;
	 }
	 if (jj_rescan) {
	   int i = 0; Token tok = token;
	   while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
	   if (tok != null) jj_add_error_token(kind, i);
	 }
	 if (jj_scanpos.kind != kind) return true;
	 if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
	 return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;
